fix: update mobile button + search spacing on mobile

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -9,7 +9,7 @@
 
 :root {
   --sl-content-margin-inline: 1rem;
-  --sl-content-pad-x: 3rem;
+  --sl-content-pad-x: 1rem;
   --sl-sidebar-pad-x: 1.25rem;
   --sl-sidebar-width: 20rem;
   --sl-content-width: 54rem;
